docs/v4.0.0/_sources/gallery/single/spf.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/spf.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_spf.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_spf.py:


SPF Computation
===============

This example demonstrates the computation and visualization of the Scattering Phase Function (SPF) using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-37

.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.scatterer import CoreShell
    from PyMieSim.single.source import Gaussian
    from PyMieSim.single.representations import SPF
    from PyMieSim.single.polarization import RightCircular

    source = Gaussian(
        wavelength=1000 * ureg.nanometer,
        polarization=RightCircular(),
        optical_power=1 * ureg.watt,
        NA=0.3 * ureg.AU,
    )

    scatterer = CoreShell(
        core_diameter=500 * ureg.nanometer,
        shell_thickness=400 * ureg.nanometer,
        source=source,
        core_refractive_index=1.4 * ureg.RIU,
        shell_refractive_index=1.8 * ureg.RIU,
        medium_refractive_index=1.0 * ureg.RIU,
    )


    spf = SPF(scatterer=scatterer, sampling=300)

    figure = spf.plot()



.. image-sg:: /gallery/single/images/sphx_glr_spf_001.png
   :alt: spf
   :srcset: /gallery/single/images/sphx_glr_spf_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.336 seconds)


.. _sphx_glr_download_gallery_single_spf.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: spf.ipynb <spf.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: spf.py <spf.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: spf.zip <spf.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
